<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.InfoActivity"
    tools:showIn="@layout/activity_info">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_fixed_text"
                android:text="@string/name"
                android:textSize="@dimen/fixed_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_fixed_text"
                android:textSize="@dimen/dynamic_text_size"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_fixed_text"
                android:text="@string/phone"
                android:textSize="@dimen/fixed_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_fixed_text"
                android:textSize="@dimen/dynamic_text_size"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_fixed_text"
                android:text="@string/email"
                android:textSize="@dimen/fixed_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_fixed_text"
                android:textSize="@dimen/dynamic_text_size"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_fixed_text"
                android:text="@string/gender"
                android:textSize="@dimen/fixed_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_fixed_text"
                android:textSize="@dimen/dynamic_text_size"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_fixed_text"
                android:text="@string/nationality"
                android:textSize="@dimen/fixed_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_national"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_fixed_text"
                android:textSize="@dimen/dynamic_text_size"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_fixed_text"
                android:text="@string/username"
                android:textSize="@dimen/fixed_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_fixed_text"
                android:textSize="@dimen/dynamic_text_size"
                android:textStyle="italic" />

        </LinearLayout>
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>